WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
131721
[GTK] Fix unused parameter warnings
https://bugs.webkit.org/show_bug.cgi?id=131721
Summary
[GTK] Fix unused parameter warnings
Brendan Long
Reported
2014-04-15 21:03:29 PDT
[GTK] Fix unused parameter warnings
Attachments
Patch
(7.77 KB, patch)
2014-04-15 21:05 PDT
,
Brendan Long
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Brendan Long
Comment 1
2014-04-15 21:05:25 PDT
Created
attachment 229425
[details]
Patch
WebKit Commit Bot
Comment 2
2014-04-16 11:00:51 PDT
Comment on
attachment 229425
[details]
Patch Clearing flags on attachment: 229425 Committed
r167360
: <
http://trac.webkit.org/changeset/167360
>
WebKit Commit Bot
Comment 3
2014-04-16 11:00:58 PDT
All reviewed patches have been landed. Closing bug.
Alexey Proskuryakov
Comment 4
2014-04-16 12:55:06 PDT
This broke webkitpy regression tests. I'll fix. [3/1417] webkit2.messages_unittest.ReceiverImplementationTest.test_receiver_implementation failed: Traceback (most recent call last): File "/Volumes/Data/slave/mavericks-release-tests-wk1/build/Source/WebKit2/Scripts/webkit2/messages_unittest.py", line 337, in test_receiver_implementation self.assertGeneratedFileContentsEqual(file_contents, _expected_receiver_implementation) File "/Volumes/Data/slave/mavericks-release-tests-wk1/build/Source/WebKit2/Scripts/webkit2/messages_unittest.py", line 317, in assertGeneratedFileContentsEqual self.assertEquals(first_line, second_list[index]) AssertionError: ' UNUSED_PARAM(decoder);' != ' ASSERT_NOT_REACHED();'
Alexey Proskuryakov
Comment 5
2014-04-16 13:03:45 PDT
Fixed in <
http://trac.webkit.org/r167379
> Please do run test-webkitpy and test-webkitperl when changing scripts.
Shivakumar J M
Comment 6
2014-04-20 23:59:03 PDT
***
Bug 131730
has been marked as a duplicate of this bug. ***
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug