[GTK] Fix unused parameter warnings https://bugs.webkit.org/show_bug.cgi?id=131721

Reviewed by Darin Adler.

Source/WebCore:
* bindings/js/JSMediaStreamCapabilitiesCustom.cpp:
(WebCore::toJS): Remove unused 'exec' parameter.

Source/WebKit2:
* Scripts/webkit2/messages.py:
(generate_message_handler): Add UNUSED_PARAM() for a couple parameters which aren't always used.
* Shared/WebCoreArgumentCoders.cpp:
(IPC::ArgumentCoder<LinearTimingFunction>::decode): Remove unused parameters.
* WebProcess/InjectedBundle/APIInjectedBundleFormClient.h:
(API::InjectedBundle::FormClient::textDidChangeInTextField): Same.
(API::InjectedBundle::FormClient::willSubmitForm): Same.
(API::InjectedBundle::FormClient::willSendSubmitEvent): Same.
* WebProcess/Network/NetworkProcessConnection.cpp:
(WebKit::NetworkProcessConnection::didReceiveSyncMessage): Same.


Canonical link: https://commits.webkit.org/149794@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@167360 268f45cc-cd09-0410-ab3c-d52691b4dbfc